# SCTK

./: .gitignore  CHANGELOG  DISCLAIMER  Dockerfile  INSTALL  LICENSE.md  README  README.md  TODO  disclaim.txt  install.txt  makefile  readme.txt  revision.txt
doc/: #GLMRules.txt#  #options.htm#  .#options.htm  .#sclite.1  GLMRules.txt  align2html.pod  asclite.pod  export.sh  infmts.htm  makefile  mcn.htm  mergectm2rttm.README  options.htm  outputs.htm  revis.htm  rover.htm  sc_stats.1  sc_stats.htm  sclite.1  sclite.htm  sctk.htm  st_opt.htm  st_out.htm
doc/images_src/: Makefile  equation.tex  ref.ctm  ref.stm  sys1.ctm  sys2.ctm  sys3.ctm
doc/rover_demo/: Report.prn  Report.sys  rover.ctm  rover.ctm.sgml  rover_demo.sh  sys1.ctm.sgml  sys2.ctm.sgml  sys3.ctm.sgml
doc/trans_rules/: ar20040907.glm  en20030506.glm  en20090415.glm  ma970904.glm
src/: makefile
src/acomp/: acomp.pl  makefile.in
src/align2html/: Segment.pm  SegmentGroup.pm  Token.pm  align2html-main.pl  buildInstallVersion.pl  makefile.in
src/asclite/: makefile
src/chfilt/: chfilt.pl  makefile.in
src/csrfilt/: RunTests.pl  (+2 more)
src/rfilter1/: configure  configure.in  makefile.in  rfilter1.c
src/rfilter1/include/: aprules2.c  atobool.c  boolpr1.c  calloc2.c  dbpkg1.c  del_eol.c  expenv.c  fatalerr.c  fcndcls.h  frstr1.c  frules2.c  gcomflag.c  gdatadef.h  grules2.c  hparstr1.h  mfname1.c  mupper.c  pltrim.c  pltrimf.c  prtrim.c  prtrim2.c  remcomm.c  rulestr2.h  ss_to_s.c  ssstr1.h  sstok2.c  stdcenvp.h  str_eq.c  strcmpi.c  strcutr.c  strdup2.c  strmacs.h  strncmpi.c  textlen.c  valdata.c
(+561 files in other folders)
